--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -423,7 +423,7 @@
     {
       "incomplete_record": true,
       "active_end_time": "",
-      "active_time": "",
+      "active_time": "2025-09-28T12:13:52",
       "feed_time": "2025-09-28T11:20:33",
       "peak_time": "",
       "ratio": "1:5:5",
