--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -52,7 +52,7 @@
     },
     {
       "active_end_time": "",
-      "active_time": "",
+      "active_time": "2025-08-24T14:05:12",
       "feed_time": "2025-08-24T13:37:48",
       "filename": "sourdough-starter-14.mp4",
       "peak_time": "2025-08-25T07:15:41",
