--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -415,20 +415,156 @@
       "active_end_time": "2025-09-28T04:28:03",
       "active_time": "2025-09-27T18:40:29",
       "feed_time": "2025-09-27T16:52:10",
-      "peak_time": "2025-09-28T02:00:46",
+      "peak_time": "2025-09-28T02:47:49",
       "ratio": "1:3.08:3.08",
       "recipe": "arachnophobia",
       "starter_grams": "12"
     },
     {
-      "incomplete_record": true,
-      "active_end_time": "",
+      "active_end_time": "2025-09-28T21:20:00",
       "active_time": "2025-09-28T12:13:52",
       "feed_time": "2025-09-28T11:20:33",
-      "peak_time": "",
+      "peak_time": "2025-09-28T20:20:56",
       "ratio": "1:5:5",
       "recipe": "arachnophobia",
       "starter_grams": "10"
+    },
+    {
+      "active_end_time": "",
+      "active_time": "2025-09-28T22:36:51",
+      "feed_time": "2025-09-28T21:47:44",
+      "peak_time": "2025-09-29T07:09:55",
+      "ratio": "1:2.05:2.05",
+      "recipe": "arachnophobia",
+      "starter_grams": "18"
+    },
+    {
+      "active_end_time": "",
+      "active_time": "",
+      "feed_time": "2025-10-09T23:21:23",
+      "peak_time": "",
+      "ratio": "1:5.07:5.07",
+      "recipe": "arachnophobia",
+      "starter_grams": "14"
+    },
+    {
+      "active_end_time": "",
+      "active_time": "2025-10-10T23:24:26",
+      "feed_time": "2025-10-10T22:58:06",
+      "peak_time": "2025-10-11T07:12:07",
+      "ratio": "1:5.04:5.04",
+      "recipe": "arachnophobia",
+      "starter_grams": "25"
+    },
+    {
+      "active_end_time": "",
+      "active_time": "2025-10-13T00:04:06",
+      "feed_time": "2025-10-12T23:06:06",
+      "peak_time": "2025-10-13T07:38:06",
+      "ratio": "1:5.04:5.04",
+      "recipe": "arachnophobia",
+      "starter_grams": "25"
+    },
+    {
+      "note": "phone battery died half way through recording this",
+      "incomplete_record": true,
+      "active_end_time": "",
+      "active_time": "2025-10-14T20:46:06",
+      "feed_time": "2025-10-14T19:40:06",
+      "peak_time": "",
+      "ratio": "1:1.19:1.19",
+      "recipe": "arachnophobia",
+      "starter_grams": "27"
+    },
+    {
+      "active_end_time": "2025-10-16T09:56:07",
+      "active_time": "2025-10-15T23:04:06",
+      "feed_time": "2025-10-15T21:42:06",
+      "peak_time": "2025-10-16T05:36:06",
+      "ratio": "1:2:2",
+      "recipe": "arachnophobia",
+      "starter_grams": "19"
+    },
+    {
+      "active_end_time": "2025-10-17T04:32:15",
+      "active_time": "2025-10-16T21:02:12",
+      "feed_time": "2025-10-16T19:48:20",
+      "peak_time": "2025-10-17T04:21:23",
+      "ratio": "1:3.1:3.1",
+      "recipe": "arachnophobia",
+      "starter_grams": "22"
+    },
+    {
+      "active_end_time": "",
+      "active_time": "2025-10-18T22:00:29",
+      "feed_time": "2025-10-18T20:09:42",
+      "peak_time": "2025-10-19T05:23:31",
+      "ratio": "1:2.07:2.07",
+      "recipe": "arachnophobia",
+      "starter_grams": "14"
+    },
+    {
+      "active_end_time": "",
+      "active_time": "2025-10-20T01:19:09",
+      "feed_time": "2025-10-20T00:46:57",
+      "peak_time": "2025-10-20T08:53:51",
+      "ratio": "1:5:5",
+      "recipe": "arachnophobia",
+      "starter_grams": "25"
+    },
+    {
+      "active_end_time": "",
+      "active_time": "2025-10-20T21:20:37",
+      "feed_time": "2025-10-20T20:52:18",
+      "peak_time": "2025-10-21T04:45:37",
+      "ratio": "1:1.04:1.04",
+      "recipe": "arachnophobia",
+      "starter_grams": "45"
+    },
+    {
+      "active_end_time": "",
+      "active_time": "2025-10-21T22:12:13",
+      "feed_time": "2025-10-21T21:54:23",
+      "peak_time": "2025-10-22T08:23:20",
+      "ratio": "1:1.044:1.044",
+      "recipe": "arachnophobia",
+      "starter_grams": "45"
+    },
+    {
+      "active_end_time": "",
+      "active_time": "2025-10-23T22:03:01",
+      "feed_time": "2025-10-23T21:21:06",
+      "peak_time": "2025-10-24T07:25:05",
+      "ratio": "1:1:1",
+      "recipe": "arachnophobia",
+      "starter_grams": "41"
+    },
+    {
+      "active_end_time": "",
+      "active_time": "2025-10-30T00:20:44",
+      "feed_time": "2025-10-29T22:12:19",
+      "peak_time": "2025-10-30T11:56:44",
+      "ratio": "1:5:5",
+      "recipe": "arachnophobia",
+      "starter_grams": "15"
+    },
+    {
+      "active_end_time": "",
+      "active_time": "2025-10-30T21:22:17",
+      "feed_time": "2025-10-30T20:44:15",
+      "peak_time": "2025-10-31T07:14:17",
+      "ratio": "1:1:1",
+      "recipe": "arachnophobia",
+      "starter_grams": "78"
+    },
+    {
+      "active_end_time": "",
+      "active_time": "2025-11-01T23:15:00",
+      "feed_time": "2025-11-01T21:39:40",
+      "peak_time": "",
+      "ratio": "1:1:1",
+      "recipe": "arachnophobia",
+      "starter_grams": "34"
     }
   ]
 }
